# libvss-types

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh  flake.nix
.github/workflows/: ci.yml
cmake/: vss-types-config.cmake.in  vss-types.pc.in
examples/: CMakeLists.txt  basic_example.cpp  struct_example.cpp
idl/: vss_signal.idl  vss_types.idl
include/vss/types/: quality.hpp  struct.hpp  types.hpp  value.hpp
src/: quality.cpp  struct.cpp  value.cpp
tests/: CMakeLists.txt  README.md  test_quality.cpp  test_struct.cpp  test_struct_advanced.cpp  test_value.cpp  test_vss_integration.cpp  vss_test.json  vss_test_fixture.hpp
